--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
     /* border: 2px solid black; */
     margin: 0;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: 'Poppins', sans-serif;
 }
 .hero-section {
     display: flex;
@@ -133,6 +136,7 @@ body {
 .body-section {
    border: 5px solid black;
    background-color: white;
+   flex-grow: 1;
 }
 .body-section-2 {
     display: flex;
@@ -175,16 +179,17 @@ body {
     font-size: 20px;
     /* text-align: center; */
     margin-bottom: 30px;
+    line-height: 30px;
 }
 .info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
-    /* border: 2px solid black; */
+    /* border: 2px solid black;/ */
 }
 .info:hover {
-    background-color: #FF4D94;
+    background-color: #F7F5FF;
 }
 .view-more {
     font-size: 18px;
@@ -202,12 +207,12 @@ body {
     min-width: 1300px;
     margin-top: 100px;
 }
-.b3heading, .brheading {
+.b3heading, .brheading, .b6head {
     font-size: 62px;
     font-weight: bold;
     margin-bottom: 16px;
 }
-.b3para, .b4para {
+.b3para, .b4para{
     font-size: 28px;
     text-align: left;
     margin-bottom: 32px;
@@ -267,6 +272,7 @@ body {
 }
 .text-content {
     font-size: 28px;
+    font-weight: 100;
 }
 .profile-img {
     display: flex;
@@ -285,3 +291,207 @@ body {
 .sliderimage {
     margin-top: 16px;
 }
+/*  */
+
+.body-6 {
+    display: flex;
+    flex-direction: column;
+    /* border: 2px solid black; */
+    align-items: center;
+    margin-top: 100px;
+}
+.b6para {
+    font-size: 18px;
+}
+.price-box {
+    display: flex;
+    justify-content: space-around;
+    /* border: 2px solid black; */
+    min-width: 1500px;
+    margin-top: 100px;
+}
+.price-box1 {
+    display: flex;
+    flex-direction: column;
+    /* border: 2px solid black; */
+    align-items: center;
+    justify-content: space-between;
+    min-width: 500px;
+    height: 650px;
+}
+ul {
+    /* align-self: flex-end; */
+    list-style-type: square;
+}
+.bp {
+    font-size: 24px;
+    font-weight: 700;
+}
+.b499 {
+    font-size: 36px;
+    font-weight: bolder;
+}
+.b5000 {
+    font-size: 18px;
+}
+.lists {
+    /* border: 2px solid black; */
+    font-size: 32px;
+    line-height: 50px;
+    margin-top: 55px;
+    flex-grow: 1;
+}
+.get-started-button {
+    border: 2px solid #FF007A;
+    font-size: 24px;
+    color: #FF007A;
+    font-weight: bold;
+    padding: 15px 145px;
+    border-radius: 55px;
+    margin-top: 45px;
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.pbtexting {
+    align-self: center;
+}
+.price-box1:hover {
+    border: 2px solid #FF007A;
+    border-radius: 15px;
+    .get-started-button {
+        background-color: #FF007A;
+        border: 2px solid #FF007A;
+        color: white;
+    }
+}
+
+/*  */
+.body-section-7 {
+    /* border: 2px solid black; */
+    background-color: #6B50FF;
+    padding: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+.b7content {
+    color: white;
+    text-align: center;
+}
+.h7text {
+    font-size: 62px;
+}
+.p7paratext {
+    font-size: 28px;
+    min-width: 300px;
+}
+.singupform {
+    display: flex;
+    flex-direction: row;
+    /* border: 2px solid black; */
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+}
+.mailid {
+    background-color: white;
+    color: black;
+    padding: 25px 350px 25px 25px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: start;
+}
+.lastsignupbtn {
+    background-color: #FF007A;
+    padding: 25px 50px;
+    border-radius: 50px;
+    font-weight: bold;
+}
+.confirmtext {
+    /* border: 2px solid black; */
+    margin-top: 25px;
+    font-size: 18px;
+}
+
+.body-section-8 {
+    padding: 75px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+}
+.body-section-8 > h1 {
+    /* border: 2px solid black; */
+    font-size: 62px;
+    margin: 0;
+}
+.body-section-8 > p {
+    /* border: 2px solid black; */
+    font-size: 28px;
+    width: 1000px;
+    text-align: center;
+}
+.body-section-9 {
+    padding: 150px;
+    display: flex;
+    gap: 76px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Footer */
+.footer-section{
+    background-color: #211F25;
+}
+.footer-1{
+    color: white;
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     padding: 50px;
+}
+.footer-left {
+    display: flex;
+    flex-direction: column;
+}
+.footer-left-logo {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+.footer-menu {
+    display: flex;
+    gap: 16px;
+    margin-top: 25px;
+}
+.footer-right-subscribe {
+    font-size: 32px;
+    font-weight: bold;
+}
+.footer-right-down {
+    font-size: 18px;
+}
+.footer-2 {
+    padding: 25px 50px;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer2-left {
+    display: flex;
+    gap: 16px;
+}
+.footer-right-link:hover {
+    color: #FF007A;
+}
+.divider {
+    width: 95%;
+}
+
