--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ body {
 /* Body */
 
 .body-section {
-   border: 5px solid black;
+   /* border: 5px solid black; */
    background-color: white;
    flex-grow: 1;
 }
